--- a/wisebeat-frontend/package.json
+++ b/wisebeat-frontend/package.json
@@ -11,10 +11,13 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
     "react-rotary-knob": "^1.1.7",
     "react-rotary-knob-skin-pack": "^1.0.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
