--- a/wisebeat-frontend/package.json
+++ b/wisebeat-frontend/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.33",
+    "array-to-audiobuffer": "^1.0.0",
+    "audio-buffer-from": "^1.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
