--- a/wisebeat-frontend/package.json
+++ b/wisebeat-frontend/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "history": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
