--- a/wisebeat-frontend/package.json
+++ b/wisebeat-frontend/package.json
@@ -8,8 +8,10 @@
     "@material-ui/lab": "^4.0.0-alpha.33",
     "array-to-audiobuffer": "^1.0.0",
     "audio-buffer-from": "^1.1.1",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "history": "^4.6.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
@@ -18,9 +20,9 @@
     "react-rotary-knob-skin-pack": "^1.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
+    "recorder-js": "^1.0.7",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "history": "^4.6.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
