--- a/wisebeat-frontend/package.json
+++ b/wisebeat-frontend/package.json
@@ -6,10 +6,12 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.33",
+    "AsyncStorage": "^0.1.5",
     "array-to-audiobuffer": "^1.0.0",
     "audio-buffer-from": "^1.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "history": "^4.6.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.9.0",
@@ -19,8 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "history": "^4.6.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
